# talc

./: Cargo.toml  clippy.toml  deny.toml
assets/mods/base/: README.md  data.lua  info.toml
assets/mods/core/: README.md  data.lua  info.toml
assets/shaders/: chunk.wgsl  chunk_prepass.wgsl
benches/: chunk.rs  chunks_refs.rs  meshing.rs
src/: bevy.rs  chunk.rs  chunks_refs.rs  constants.rs  debug_camera.rs  debug_menu.rs  face_direction.rs  greedy_mesher.rs  greedy_mesher_optimized.rs  lib.rs  lod.rs  main.rs  position.rs  quad.rs  rendering.rs  scanner.rs  smooth_transform.rs  sun.rs  utils.rs  voxel.rs  voxel_engine.rs
src/chunky/: async_chunkloader.rs  chunk.rs  chunk_mesh.rs  chunks_refs.rs  constants.rs  face_direction.rs  greedy_mesher_optimized.rs  lod.rs  mod.rs  quad.rs
src/frustrum_culling/: aabb.rs
src/mod_manager/: lua_conversions.rs  mod.rs  mod_loader.rs  prototypes.rs
src/player/: camera.rs  debug_camera.rs  mod.rs  player.rs  render_distance.rs
src/render/: chunk_material.rs  chunk_render_pipeline.rs  depth_texture.rs  mod.rs  wgpu_context.rs
src/winit/: bevy_winit_event_converters.rs  mod.rs
