[package]
name = "talc"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.15.1"
bevy-inspector-egui = "0.29.1"
bevy_atmosphere = "0.12.2"
bevy_flycam = "0.15.0"
bracket-noise = "0.8.7"
futures-lite = "2.2.0"
rand = "0.9.0"
rand_chacha = "0.9.0"
tinyvec = "1.6.0"

[dev-dependencies]
criterion = {version="0.5.1", features = ["html_reports"]}

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable some optimizations in debug mode
[profile.dev]
opt-level = 1

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "allow"
trivial_regex = "allow"
unreadable_literal = "allow"
similar_names = "allow"
cast_precision_loss = "allow"
match_same_arms = "allow"

# todo
cast_wrap_around = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"

[config.clippy]
avoid-breaking-exported-api = false

# [[bench]]
# name = "chunk"
# harness = false

# [[bench]]
# name = "chunks_refs"
# harness = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
