[package]
name = "talc"
version = "0.1.0"
edition = "2024"
authors = ["Zachary Picco"]
description = "Voxel-based 3D automation game."
repository = "https://github.com/notnotmelon/talc"
keywords = ["game", "voxel", "sandbox", "factory"]
readme = "README.md"
license = "CC BY-NC 4.0"
categories = ["rendering::engine", "games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# I am too stupid to understand most of bevy. Only import portions of bevy that are understandable.
bevy_ecs = {git = "https://github.com/bushrat011899/bevy", package = "bevy_ecs"}
bevy_app = {git = "https://github.com/bushrat011899/bevy", package = "bevy_app"}
bevy_derive = {git = "https://github.com/bushrat011899/bevy", package = "bevy_derive"}
bevy_tasks = {git = "https://github.com/bushrat011899/bevy", package = "bevy_tasks"}
bevy_utils = {git = "https://github.com/bushrat011899/bevy", package = "bevy_utils"}
bevy_time = {git = "https://github.com/bushrat011899/bevy", package = "bevy_time"}
bevy_reflect = {git = "https://github.com/bushrat011899/bevy", package = "bevy_reflect"}
bevy_math = {git = "https://github.com/bushrat011899/bevy", package = "bevy_math"}
bevy_transform = {git = "https://github.com/bushrat011899/bevy", package = "bevy_transform"}
bevy_color = {git = "https://github.com/bushrat011899/bevy", package = "bevy_color"}
bevy_input = {git = "https://github.com/bushrat011899/bevy", package = "bevy_input"}
bevy_window = {git = "https://github.com/bushrat011899/bevy", package = "bevy_window"}
anyhow = "1.0.95"
bracket-noise = "0.8"
futures-lite = "2.6"
mlua = {version = "0.10.3", features = ["luau-jit", "anyhow"]}
serde = "1.0"
toml = "0.8"
rand = "0.9.0"
bytemuck = "1.21.0"
winit = "0.30.8"
strum = "0.26.3"
strum_macros = "0.26.4"
tinyrand = "0.5.0"
wgpu = {version = "24.0.1"}
cgmath = "0.18.0"

[dependencies.image]
version = "0.25.5"
default-features = false
features = ["png"]

[dev-dependencies]
criterion = {version = "0.5.1", features = ["html_reports"]}

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable some optimizations in debug mode
[profile.dev]
opt-level = 1

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "allow"
trivial_regex = "allow"
unreadable_literal = "allow"
similar_names = "allow"
cast_precision_loss = "allow"
match_same_arms = "allow"

# todo
cast_wrap_around = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
