[package]
name = "talc"
version = "0.1.0"
edition = "2024"
authors = ["Zachary Picco"]
description = "Voxel-based 3D automation game."
repository = "https://github.com/notnotmelon/talc"
keywords = ["game", "voxel", "sandbox", "factory"]
readme = "README.md"
license = "CC BY-NC 4.0"
categories = ["rendering::engine", "games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
bracket-noise = "0.8"
futures-lite = "2.6"
mlua = {version = "0.10.3", features = ["luau-jit", "anyhow"]}
serde = "1.0.218"
toml = "0.8"
bevy = {git = "https://github.com/bevyengine/bevy", rev = "06cb5c5"}
rand = "0.9.0"
bytemuck = "1.22.0"

[dev-dependencies]
criterion = {version = "0.5.1", features = ["html_reports"]}

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable some optimizations in debug mode
[profile.dev]
opt-level = 1

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "allow"
trivial_regex = "allow"
unreadable_literal = "allow"
similar_names = "allow"
cast_precision_loss = "allow"
match_same_arms = "allow"

# todo
cast_wrap_around = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
